[project]
name = "beboundless-data"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "d0lwl0b", email = "208416493+d0lwl0b@users.noreply.github.com"},
]
dependencies = [
    "pytest-playwright>=0.7.0",
    "diskcache>=5.6.3",
    "botasaurus>=4.0.88",
    "sqlmodel>=0.0.24",
    "sqlalchemy>=2.0.43",
    "python-dotenv>=1.1.1",
    "jupyterlab>=4.4.6",
    "pandas>=2.3.2",
    "numpy>=2.3.2",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "scipy>=1.16.1",
    "tomlkit>=0.13.3",
    "noise>=1.2.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
